force-app/main/default/objects/Engagement_Touch__c/Engagement_Touch__c.object-meta.xml
<CustomObject>
    <label>Engagement Touch</label>
    <nameField>
        <displayFormat>ET-{0000}</displayFormat>
        <label>Engagement Touch Number</label>
        <type>AutoNumber</type>
        <startingNumber>1</startingNumber>
    </nameField>
    <pluralLabel>Engagement Touches</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>