force-app/main/default/objects/Engagement_Touch__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Engagement Touches</relationshipLabel>
    <relationshipName>Engagement_Touches</relationshipName>
    <type>Lookup</type>
</CustomField>