force-app/main/default/objects/Engagement_Touch__c/fields/Archived_At__c.field-meta.xml
<CustomField>
    <fullName>Archived_At__c</fullName>
    <label>Archived At</label>
    <type>DateTime</type>
</CustomField>