force-app/main/default/objects/Engagement_Touch__c/fields/Asset_Url__c.field-meta.xml
<CustomField>
    <fullName>Asset_Url__c</fullName>
    <label>Asset Url</label>
    <type>Url</type>
</CustomField>