force-app/main/default/objects/Engagement_Touch__c/fields/Email_At_Touch__c.field-meta.xml
<CustomField>
    <fullName>Email_At_Touch__c</fullName>
    <externalId>true</externalId>
    <label>Email At Touch</label>
    <type>Email</type>
</CustomField>