force-app/main/default/objects/Engagement_Touch__c/fields/Ingested_At__c.field-meta.xml
<CustomField>
    <fullName>Ingested_At__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Ingested At</label>
    <type>DateTime</type>
</CustomField>