force-app/main/default/objects/Engagement_Touch__c/fields/Processing_Message__c.field-meta.xml
<CustomField>
    <fullName>Processing_Message__c</fullName>
    <label>Processing Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>