force-app/main/default/objects/Engagement_Touch__c/fields/Source_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Event_Type__c</fullName>
    <label>Source Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Download</fullName>
            </value>
            <value>
                <fullName>Form Submission</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Page View</fullName>
            </value>
            <value>
                <fullName>Event Attendance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>