force-app/main/default/objects/Engagement_Touch__c/fields/Topic__c.field-meta.xml
<CustomField>
    <fullName>Topic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Topic</label>
    <referenceTo>Touch_Topic__c</referenceTo>
    <relationshipLabel>Engagement Touches</relationshipLabel>
    <relationshipName>Engagement_Touches</relationshipName>
    <type>Lookup</type>
</CustomField>