force-app/main/default/objects/Engagement_Touch__c/fields/Touch_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Touch_Subtype__c</fullName>
    <label>Touch Subtype</label>
    <length>80</length>
    <type>Text</type>
</CustomField>